--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^8.2.4",
     "firebase-admin": "^9.4.2",
     "next": "10.0.5",
+    "next-pwa": "^5.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
